fixed Review list styling and added the first name of the review author at the bottom. Also added spacing between the review cards

--- a/app/assets/stylesheets/pages/_rental_show.scss
+++ b/app/assets/stylesheets/pages/_rental_show.scss
@@ -24,6 +24,9 @@
   .fas {
     color: gold;
   }
+
+  padding-bottom: 4px;
+  margin-bottom: 8px;
 }
 
 
